appId: ${APP_ID}
name: production_back_to_chat
---
- runFlow:
    when:
      platform: Android
    commands:
      - back
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: '^Back$'
- assertVisible:
    id: chat_composer
