appId: ${APP_ID}
name: production_catalog_remove_charlie_start
---
- tapOn: Group information
- assertVisible: Group Info
- scrollUntilVisible:
    element:
      id: 'group-member-remove-${CHARLIE_PEER_ID}'
    direction: DOWN
- tapOn:
    id: 'group-member-remove-${CHARLIE_PEER_ID}'
- assertVisible: 'Remove Journeycharlie from the group\?'
- tapOn: Remove
