appId: ${APP_ID}
name: production_catalog_remove_charlie_verify
---
- assertVisible: '(?s)^.*\n2 members\n.*$'
- assertNotVisible:
    id: 'group-member-remove-${CHARLIE_PEER_ID}'
- runFlow:
    when:
      platform: Android
    commands:
      - back
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: '^Back$'
- assertVisible:
    id: chat_composer
