appId: ${APP_ID}
name: production_direct_open
---
- assertVisible:
    id: orbit.view.inner_circle
- tapOn:
    id: orbit.contact.${PEER_ID}
- assertVisible:
    id: chat_composer
